--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,26 +12,38 @@ body {
   letter-spacing: 0.5px;
 }
 
-
 .navbar {
   position: fixed;
   top: 0;
   width: 100%;
-  background: #791586;
-  display: flex;
-  justify-content: space-between;
+  background: rgba(121, 21, 134, 0.85);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   padding: 1rem 2rem;
   z-index: 1000;
+
+  display: flex;
+  justify-content: center;
 }
 
 .navbar ul {
   list-style: none;
   display: flex;
-  gap: 1.5rem;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  padding: 0;
+  /* margin: 0; */
+}
+
+.navbar li {
+  flex: 1;
+  text-align: center;
 }
 
 .navbar a {
   color: white;
+  font-size: 1.4rem;
   text-decoration: none;
 }
 
@@ -39,9 +51,17 @@ body {
   min-height: 100vh;
   padding-top: 6rem;
   text-align: center;
+  font-size: 1.6rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.intro-logo {
+  display: block;
+  margin: 1.5rem auto 0 auto;
+  width: 180px;
+  height: auto;
 }
 
 .section {
