--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,7 @@ body {
   min-height: 100vh;
   padding-top: 6rem;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,6 +54,43 @@ body {
   padding: 6rem 2rem;
   max-width: 900px;
   margin: auto;
+}
+
+.section h2{
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  letter-spacing: 0.08em;
+
+
+}
+
+.Scroll{
+  display: flex;
+  gap:  4rem;
+  overflow-x: auto;
+  padding: 2rem 1rem;
+  scroll-behavior: smooth;
+}
+
+.Scroll::webkit-scroller{
+  height: 6px;
+}
+
+.Photos{
+  min-width: 360px;
+  border: 2px solid #b1d34A;
+  padding: 1.5rem;
+  transition: transform 0.2s ease;
+}
+
+.Photos:hover{
+  transform: scale(1.02);
+}
+.Photos img{
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .card {
